WIP on nf-core translation

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -26,16 +26,17 @@ process {
         ]
     }
 
-    withName: FASTQC {
-        ext.args = '--quiet'
-    }
-
     withName: CUSTOM_DUMPSOFTWAREVERSIONS {
         publishDir = [
             path: { "${params.outdir}/pipeline_info" },
             mode: params.publish_dir_mode,
             pattern: '*_versions.yml'
         ]
+    }
+
+    withName: ".*:SPARK.*" {
+        ext.spark_container   = params.stitching_container
+        ext.prefix = { "spark_${meta.id}" }
     }
 
 }
