--- a/nextflow.config
+++ b/nextflow.config
@@ -12,18 +12,32 @@ params {
     // TODO nf-core: Specify your pipeline's command line flags
     // Input options
     input                      = null
+    acq_names                  = null
+    channels                   = 'c0,c1,c2,c3'
+    stitching_ref              = null
 
-
-    // References
-    genome                     = null
-    igenomes_base              = 's3://ngi-igenomes/igenomes'
-    igenomes_ignore            = false
-    // MultiQC options
-    multiqc_config             = null
-    multiqc_title              = null
-    multiqc_logo               = null
-    max_multiqc_email_size     = '25.MB'
-    multiqc_methods_description = null
+    stitching_container        = 'multifish/biocontainers-spark:3.1.3'
+    stitching_app              = '/app/app.jar'
+    stitching_output           = 'stitching'
+    resolution                 = '0.23,0.23,0.42'
+    axis_mapping               = '-x,y,z'
+    stitching_block_size       = '128,128,64'
+    retile_z_size              = '64'
+    stitching_mode             = 'incremental'
+    stitching_padding          = '0,0,0'
+    stitching_blur_sigma       = '2'
+    stitching_czi_pattern      = ''
+    flatfield_correction:      = true
+    spark_conf                 = null
+    spark_work_dir             = null
+    spark_workers              = 6
+    spark_worker_cores         = 8
+    gb_per_core                = 15
+    driver_cores               = 1
+    driver_memory              = '2g'
+    driver_logconfig           = null
+    wait_for_spark_secs        = 7200,
+    sleep_between_checks_secs  = 10,
 
     // Boilerplate options
     outdir                     = null
