--- a/nextflow.config
+++ b/nextflow.config
@@ -16,9 +16,9 @@ params {
     channels                   = 'c0,c1,c2,c3'
     stitching_ref              = null
 
-    stitching_container        = 'multifish/biocontainers-spark:3.1.3'
-    stitching_app              = '/app/app.jar'
-    stitching_output           = 'stitching'
+    wait_for_spark_timeout_seconds       = 7200
+    sleep_between_timeout_checks_seconds = 10
+
     resolution                 = '0.23,0.23,0.42'
     axis_mapping               = '-x,y,z'
     stitching_block_size       = '128,128,64'
@@ -27,17 +27,16 @@ params {
     stitching_padding          = '0,0,0'
     stitching_blur_sigma       = '2'
     stitching_czi_pattern      = ''
-    flatfield_correction:      = true
-    spark_conf                 = null
-    spark_work_dir             = null
+    flatfield_correction       = true
+    //spark_local_dir            = "/tmp/spark-${workflow.sessionId}"
+    //spark_work_dir             = "${workDir}/spark/${workflow.sessionId}"
     spark_workers              = 6
     spark_worker_cores         = 8
     gb_per_core                = 15
     driver_cores               = 1
     driver_memory              = '2g'
     driver_logconfig           = null
-    wait_for_spark_secs        = 7200,
-    sleep_between_checks_secs  = 10,
+    spark_max_connect_retries  = 64
 
     // Boilerplate options
     outdir                     = null
@@ -155,15 +154,6 @@ profiles {
     test      { includeConfig 'conf/test.config'      }
     test_full { includeConfig 'conf/test_full.config' }
 }
-
-
-// Load igenomes.config if required
-if (!params.igenomes_ignore) {
-    includeConfig 'conf/igenomes.config'
-} else {
-    params.genomes = [:]
-}
-
 
 // Export these variables to prevent local Python/R libraries from conflicting with those in the container
 // The JULIA depot path has been adjusted to a fixed path `/usr/local/share/julia` that needs to be used for packages in the container.
