--- a/conf/modules.config
+++ b/conf/modules.config
@@ -26,6 +26,14 @@ process {
         ]
     }
 
+    withName: '.*:SPARK_STARTMANAGER' {
+        ext.sleep_secs = 2
+    }
+
+    withName: '.*:SPARK_STARTWORKER' {
+        ext.sleep_secs = 2
+    }
+
     withName: '.*:SPARK_WAITFORMANAGER' {
         ext.sleep_secs = 2
         ext.max_wait_secs = 7200
