initial stitching workflow implementation

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -26,20 +26,20 @@ process {
         ]
     }
 
-    withName: '.*:SPARK_STARTMANAGER' {
+    withName: SPARK_STARTMANAGER {
         ext.sleep_secs = 2
     }
 
-    withName: '.*:SPARK_STARTWORKER' {
+    withName: SPARK_STARTWORKER {
         ext.sleep_secs = 2
     }
 
-    withName: '.*:SPARK_WAITFORMANAGER' {
+    withName: SPARK_WAITFORMANAGER {
         ext.sleep_secs = 2
         ext.max_wait_secs = 7200
     }
 
-    withName: '.*:SPARK_WAITFORWORKER' {
+    withName: SPARK_WAITFORWORKER {
         ext.sleep_secs = 2
         ext.max_wait_secs = 7200
     }
