--- a/nextflow.config
+++ b/nextflow.config
@@ -13,11 +13,7 @@ params {
     input                      = null
     acq_names                  = null
     channels                   = 'c0,c1,c2,c3'
-    stitching_ref              = null
-
-    wait_for_spark_timeout_seconds       = 7200
-    sleep_between_timeout_checks_seconds = 10
-
+    acq_ref                    = null
     resolution                 = '0.23,0.23,0.42'
     axis_mapping               = '-x,y,z'
     stitching_block_size       = '128,128,64'
