more progress to a complete pipeline

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -27,20 +27,32 @@ process {
     }
 
     withName: SPARK_STARTMANAGER {
+        errorStrategy = 'terminate'
         ext.sleep_secs = 2
     }
 
     withName: SPARK_STARTWORKER {
+        errorStrategy = 'terminate'
         ext.sleep_secs = 2
     }
 
     withName: SPARK_WAITFORMANAGER {
+        errorStrategy = 'terminate'
         ext.sleep_secs = 2
         ext.max_wait_secs = 7200
     }
 
     withName: SPARK_WAITFORWORKER {
+        errorStrategy = 'terminate'
         ext.sleep_secs = 2
         ext.max_wait_secs = 7200
+    }
+
+    withName: SPARK_RUNAPP {
+        errorStrategy = 'terminate'
+    }
+
+    withName: SPARK_TERMINATE {
+        errorStrategy = 'terminate'
     }
 }
