--- a/nextflow.config
+++ b/nextflow.config
@@ -27,10 +27,9 @@ params {
     //spark_work_dir             = "${workDir}/spark/${workflow.sessionId}"
     spark_workers              = 6
     spark_worker_cores         = 8
-    gb_per_core                = 15
-    driver_cores               = 1
-    driver_memory              = '2g'
-    driver_logconfig           = null
+    spark_gb_per_core          = 15
+    spark_driver_cores         = 1
+    spark_driver_memory        = '2g'
     spark_max_connect_retries  = 64
 
     // Boilerplate options
@@ -60,8 +59,8 @@ params {
 
     // Max resource options
     // Defaults only, expecting to be overwritten
-    max_memory                 = '128.GB'
-    max_cpus                   = 16
+    max_memory                 = '1024.GB'
+    max_cpus                   = 500
     max_time                   = '240.h'
 
 }
