implemented software versions

--- a/nextflow.config
+++ b/nextflow.config
@@ -12,25 +12,22 @@ params {
     // Input options
     input                      = null
     acq_names                  = null
-    channels                   = 'c0,c1,c2,c3'
-    acq_ref                    = null
+    channels                   = 'c0,c1'
+    acq_ref                    = '1'
     resolution                 = '0.23,0.23,0.42'
     axis_mapping               = '-x,y,z'
-    stitching_block_size       = '128,128,64'
-    retile_z_size              = '64'
+    stitching_block_size       = '1024,1024,256'
+    retile_z_size              = '128'
     stitching_mode             = 'incremental'
     stitching_padding          = '0,0,0'
     stitching_blur_sigma       = '2'
     stitching_czi_pattern      = ''
     flatfield_correction       = true
-    //spark_local_dir            = "/tmp/spark-${workflow.sessionId}"
-    //spark_work_dir             = "${workDir}/spark/${workflow.sessionId}"
-    spark_workers              = 6
-    spark_worker_cores         = 8
-    spark_gb_per_core          = 15
+    spark_workers              = 1
+    spark_worker_cores         = 4
+    spark_gb_per_core          = 4
     spark_driver_cores         = 1
-    spark_driver_memory        = '2g'
-    spark_max_connect_retries  = 64
+    spark_driver_memory        = '1 GB'
 
     // Boilerplate options
     outdir                     = null
@@ -47,7 +44,6 @@ params {
     schema_ignore_params       = 'genomes'
     enable_conda               = false
 
-
     // Config options
     custom_config_version      = 'master'
     custom_config_base         = "https://raw.githubusercontent.com/nf-core/configs/${params.custom_config_version}"
@@ -55,7 +51,6 @@ params {
     config_profile_contact     = null
     config_profile_url         = null
     config_profile_name        = null
-
 
     // Max resource options
     // Defaults only, expecting to be overwritten
@@ -82,7 +77,6 @@ try {
 // } catch (Exception e) {
 //   System.err.println("WARNING: Could not load nf-core/config/lightsheetrecon profiles: ${params.custom_config_base}/pipeline/lightsheetrecon.config")
 // }
-
 
 profiles {
     debug { process.beforeScript = 'echo $HOSTNAME' }
