minor fixes and cleanup

--- a/nextflow.config
+++ b/nextflow.config
@@ -13,7 +13,7 @@ params {
     input                      = null
     acq_names                  = null
     channels                   = 'c0,c1'
-    acq_ref                    = '1'
+    stitching_channel          = 'c1'
     resolution                 = '0.23,0.23,0.42'
     axis_mapping               = '-x,y,z'
     stitching_block_size       = '1024,1024,256'
@@ -28,6 +28,7 @@ params {
     spark_gb_per_core          = 4
     spark_driver_cores         = 1
     spark_driver_memory        = '1 GB'
+    stitching_app_container    = 'multifish/biocontainers-stitching-spark:1.9.0'
 
     // Boilerplate options
     outdir                     = null
