added local mode

--- a/nextflow.config
+++ b/nextflow.config
@@ -23,6 +23,7 @@ params {
     stitching_blur_sigma       = '2'
     stitching_czi_pattern      = ''
     flatfield_correction       = true
+    spark_cluster              = false
     spark_workers              = 1
     spark_worker_cores         = 4
     spark_gb_per_core          = 4
