added final_block_size_xy parameter

--- a/nextflow.config
+++ b/nextflow.config
@@ -16,7 +16,8 @@ params {
     stitching_channel          = 'c1'
     resolution                 = '0.23,0.23,0.42'
     axis_mapping               = '-x,y,z'
-    stitching_block_size       = '1024,1024,256'
+    stitching_block_size       = '128,128,64'
+    final_block_size_xy        = '512'
     retile_z_size              = '128'
     stitching_mode             = 'incremental'
     stitching_padding          = '0,0,0'
