--- a/nextflow.config
+++ b/nextflow.config
@@ -13,7 +13,7 @@ params {
     input                      = null
     acq_names                  = null
     channels                   = 'c0,c1'
-    stitching_channel          = 'c1'
+    stitching_channel          = 'all'
     resolution                 = '0.23,0.23,0.42'
     axis_mapping               = '-x,y,z'
     stitching_block_size       = '128,128,64'
@@ -21,7 +21,7 @@ params {
     stitching_mode             = 'incremental'
     stitching_padding          = '0,0,0'
     stitching_blur_sigma       = '2'
-    stitching_czi_pattern      = ''
+    czi_pattern                = ''
     flatfield_correction       = true
     spark_cluster              = false
     spark_workers              = 1
