fixing linting issues

--- a/nextflow.config
+++ b/nextflow.config
@@ -17,10 +17,10 @@ params {
     resolution                 = '0.23,0.23,0.42'
     axis_mapping               = '-x,y,z'
     stitching_block_size       = '128,128,64'
-    final_block_size_xy        = '512'
+    final_block_size_xy        = 512
     stitching_mode             = 'incremental'
     stitching_padding          = '0,0,0'
-    stitching_blur_sigma       = '2'
+    stitching_blur_sigma       = 2
     czi_pattern                = ''
     flatfield_correction       = true
     spark_cluster              = false
