--- a/nextflow.config
+++ b/nextflow.config
@@ -21,7 +21,7 @@ params {
     stitching_mode             = 'incremental'
     stitching_padding          = '0,0,0'
     stitching_blur_sigma       = 2
-    czi_pattern                = null
+    stitching_czi_pattern                = null
     flatfield_correction       = true
     spark_cluster              = false
     spark_workers              = 1
