progress on turning spark apps into modules

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -55,4 +55,17 @@ process {
     withName: SPARK_TERMINATE {
         errorStrategy = 'terminate'
     }
+
+    withName: STITCHING_PARSECZI {
+        ext.args = "-r \"${params.resolution}\" -a \"${params.axis_mapping}\""
+    }
+
+    withName: STITCHING_CZI2N5 {
+        ext.args = "--blockSize ${params.stitching_block_size}"
+    }
+
+    withName: STITCHING_FLATFIELD {
+        ext.args = "--2d --bins 256"
+    }
+
 }
