--- a/nextflow.config
+++ b/nextflow.config
@@ -30,6 +30,7 @@ params {
     stitching_app_container    = 'multifish/biocontainers-stitching-spark:1.9.0'
 
     // Boilerplate options
+    indir                     = null
     outdir                     = null
     tracedir                   = "${params.outdir}/pipeline_info"
     publish_dir_mode           = 'copy'
