all steps converted to modules, working on both local and cluster

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -48,24 +48,48 @@ process {
         ext.max_wait_secs = 7200
     }
 
-    withName: SPARK_RUNAPP {
-        errorStrategy = 'terminate'
-    }
-
     withName: SPARK_TERMINATE {
         errorStrategy = 'terminate'
     }
 
     withName: STITCHING_PARSECZI {
+        errorStrategy = 'terminate'
         ext.args = "-r \"${params.resolution}\" -a \"${params.axis_mapping}\""
     }
 
     withName: STITCHING_CZI2N5 {
+        errorStrategy = 'terminate'
         ext.args = "--blockSize ${params.stitching_block_size}"
     }
 
     withName: STITCHING_FLATFIELD {
+        errorStrategy = 'terminate'
         ext.args = "--2d --bins 256"
     }
 
+    withName: STITCHING_STITCH {
+        errorStrategy = 'terminate'
+        ext.args = { "--mode ${params.stitching_mode} --padding ${params.stitching_padding} --blurSigma ${params.stitching_blur_sigma} ${stitching_channel()}" }
+    }
+
+    withName: STITCHING_FUSE {
+        errorStrategy = 'terminate'
+        ext.args = "--blending --fill --n5BlockSize ${params.final_block_size_xy}"
+    }
+}
+
+// Returns the stitching channel parameter if one was selected, or an empty string
+def stitching_channel()  {
+    sc = params.stitching_channel
+    // If stitching channel is not set or set to 'all', then use all channels for stitching.
+    if (!sc || sc=='all')
+        return ''
+    // If the user provides the channel in the form "c1" or "ch1", we just want the number:
+    def sc_num_lookup = (sc =~ /(\d+)/)
+    if (sc_num_lookup.find()) {
+        return "-r "+sc_num_lookup[0][1]
+    } else {
+        log.error "Invalid value for --stitching_channel: $sc"
+        System.exit(1)
+    }
 }
