--- a/nextflow.config
+++ b/nextflow.config
@@ -20,7 +20,8 @@ params {
     stitching_mode             = 'incremental'
     stitching_padding          = '0,0,0'
     stitching_blur_sigma       = 2
-    flatfield_correction       = true
+    flatfield_correction       = false
+    spark_local_dir            = null
     spark_cluster              = false
     spark_workers              = 1
     spark_worker_cores         = 4
@@ -65,7 +66,7 @@ params {
     // Schema validation default options
     validationFailUnrecognisedParams = false
     validationLenientMode            = false
-    validationSchemaIgnoreParams     = 'genomes'
+    validationSchemaIgnoreParams     = 'genomes,spark_local_dir'
     validationShowHiddenParams       = false
     validate_params                  = true
 }
