--- a/conf/test_full.config
+++ b/conf/test_full.config
@@ -15,7 +15,10 @@ params {
     config_profile_description = 'Full test dataset to check pipeline function'
 
     // Input data for full size test
-    // TODO nf-core: Specify the paths to your full test data ( on nf-core/test-datasets or directly in repositories, e.g. SRA)
-    // TODO nf-core: Give any required params for the test so that command line flags are not needed
-    //input = 'https://raw.githubusercontent.com/nf-core/test-datasets/viralrecon/samplesheet/samplesheet_full_illumina_amplicon.csv'
+    input             = 'https://raw.githubusercontent.com/krokicki/test-datasets/lightsheetrecon/testdata/LHA3_tiny/samplesheet.csv'
+    channels          = 'c0,c1'
+    stitching_channel = 'all'
+    resolution        = '0.23,0.23,0.42'
+    axis_mapping      = '-x,y,z'
+    indir             = "${params.outdir}/input_data"
 }
