--- a/conf/test.config
+++ b/conf/test.config
@@ -3,9 +3,10 @@
     Nextflow config file for running minimal tests
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     Defines input files and everything required to run a fast and simple pipeline test.
+    This test should be run with --stub so that it finishes quickly.
 
     Use as follows:
-        nextflow run nf-core/lightsheetrecon -profile test,<docker/singularity> --outdir <OUTDIR>
+        nextflow run nf-core/lightsheetrecon -profile test,<docker/singularity> --stub --outdir <OUTDIR>
 
 ----------------------------------------------------------------------------------------
 */
@@ -20,7 +21,10 @@ params {
     max_time   = '6.h'
 
     // Input data
-    // TODO nf-core: Specify the paths to your test data on nf-core/test-datasets
-    // TODO nf-core: Give any required params for the test so that command line flags are not needed
-    //input  = 'https://raw.githubusercontent.com/nf-core/test-datasets/viralrecon/samplesheet/samplesheet_test_illumina_amplicon.csv'
+    input             = 'https://raw.githubusercontent.com/krokicki/test-datasets/lightsheetrecon/testdata/LHA3_tiny/samplesheet.csv'
+    channels          = 'c0,c1'
+    stitching_channel = 'all'
+    resolution        = '0.23,0.23,0.42'
+    axis_mapping      = '-x,y,z'
+    indir             = "${params.outdir}/input_data"
 }
