--- a/conf/test_full.config
+++ b/conf/test_full.config
@@ -14,7 +14,7 @@ params {
     config_profile_name        = 'Full test profile'
     config_profile_description = 'Full test dataset to check pipeline function'
 
-    // Input data for full size test
+    // Input data
     input             = 'https://raw.githubusercontent.com/krokicki/test-datasets/lightsheetrecon/testdata/LHA3_tiny/samplesheet.csv'
     channels          = 'c0,c1'
     stitching_channel = 'all'
