--- a/tests/config/nextflow.config
+++ b/tests/config/nextflow.config
@@ -29,7 +29,7 @@ if ("$PROFILE" == "singularity") {
 conda { createTimeout = "120 min" }
 
 // Load test_data.config containing paths to test data
-//includeConfig 'test_data.config'
+includeConfig 'test_data.config'
 
 manifest {
     nextflowVersion = '!>=22.10.1'
