added stub run for test profile

--- a/conf/test.config
+++ b/conf/test.config
@@ -3,7 +3,8 @@
     Nextflow config file for running minimal tests
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     Defines input files and everything required to run a fast and simple pipeline test.
-    This test should be run with --stub so that it finishes quickly.
+
+    IMPORTANT: This test should be run with --stub so that it finishes quickly.
 
     Use as follows:
         nextflow run nf-core/lightsheetrecon -profile test,<docker/singularity> --stub --outdir <OUTDIR>
