--- a/conf/test_full.config
+++ b/conf/test_full.config
@@ -15,10 +15,17 @@ params {
     config_profile_description = 'Full test dataset to check pipeline function'
 
     // Input data
-    input             = 'https://raw.githubusercontent.com/krokicki/test-datasets/lightsheetrecon/testdata/LHA3_tiny/samplesheet.csv'
-    channels          = 'c0,c1'
-    stitching_channel = 'all'
-    resolution        = '0.23,0.23,0.42'
-    axis_mapping      = '-x,y,z'
-    indir             = "${params.outdir}/input_data"
+    input                = 'https://raw.githubusercontent.com/krokicki/test-datasets/lightsheetrecon/testdata/LHA3_tiny/samplesheet.csv'
+    channels             = 'c0,c1'
+    stitching_channel    = 'all'
+    resolution           = '0.23,0.23,0.42'
+    axis_mapping         = '-x,y,z'
+    indir                = "${params.outdir}/input_data"
+    flatfield_correction = true
+
+    // Spark cluster
+    spark_cluster        = true
+    spark_workers        = 1
+    spark_worker_cores   = 4
+    spark_gb_per_core    = 4
 }
