--- a/nextflow.config
+++ b/nextflow.config
@@ -66,7 +66,7 @@ params {
     // Schema validation default options
     validationFailUnrecognisedParams = false
     validationLenientMode            = false
-    validationSchemaIgnoreParams     = 'genomes,spark_local_dir'
+    validationSchemaIgnoreParams     = 'genomes'
     validationShowHiddenParams       = false
     validate_params                  = true
 }
@@ -79,6 +79,11 @@ try {
     includeConfig "${params.custom_config_base}/nfcore_custom.config"
 } catch (Exception e) {
     System.err.println("WARNING: Could not load nf-core/config profiles: ${params.custom_config_base}/nfcore_custom.config")
+}
+
+// Override institutional configs which set scratch dir, since that results in large data being copied instead of symlinked
+process {
+  scratch = false
 }
 
 profiles {
